--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -221,7 +221,7 @@ a:focus {
     text-shadow: 0 2px 2px rgba(170, 170, 170, .1);
 
     font-family: 'Share Tech Mono', sans-serif;
-    font-size: 30px;
+    font-size: 25px;
     line-height: 36px;
     letter-spacing: -1px;
 }
@@ -237,11 +237,11 @@ a:focus {
 .slide q strong {
     white-space: nowrap;
 }
-.slide p {
+.slide li {
   line-height: 2.3em;
   padding: 0px 60px;
 }
-.slide p:before{
+.slide ul li:before{
   background: url('http://code.kwint.in/emoji/img/d83ddc80.png');
   display: inline-block;
   width: 40px;
